[project]
name = "toybaru"
version = "0.1.0"
description = "Toybaru ReCare - Subaru Solterra / Toyota bZ4X Connected Services Dashboard"
requires-python = ">=3.10"
license = "GPL-2.0-only"
dependencies = [
    "httpx>=0.28",
    "click>=8.1",
    "pydantic>=2.10",
    "pyjwt>=2.8",
    "rich>=13.0",
    "keyring>=25.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "itsdangerous>=2.0",
]

[project.scripts]
toybaru = "toybaru.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.24", "httpx>=0.28"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toybaru = ["templates/*.html", "locales/*.json"]
